# SimpleTodo

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: REFACTOR_PLAN.md  cc-switch-design-system.json  cc-switch-frontend-analysis.md  项目说明.md
src/: App.tsx  index.css  开发指南.md  致谢.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: kanban.rs  mod.rs  projects.rs
src-tauri/src/db/: kanban.rs  mod.rs  projects.rs  schema.rs
src/components/: ActivityPanel.tsx  BottomScrollbar.tsx  CardDetailsDialog.tsx  CardDetailsDrawer.tsx  CardDropZone.tsx  ColorThemeDemo.tsx  ColumnColorPicker.tsx  ColumnManager.tsx  DragOverlayCard.tsx  DragPreview.tsx  ExportMenu.tsx  KanbanCard.tsx  KanbanCardSimple.tsx  KanbanCardUltraSimple.tsx  KanbanColumn.tsx  ProjectSelector.tsx  QuickAddCard.tsx  SearchFilter.tsx  StatisticsPanel.tsx
src/components/ui/: checkbox.tsx
src/hooks/: useAutoScroll.ts  useKanbanStore.ts  useLocalStorage.ts  useProjectStore.ts  useThrottle.ts
src/lib/: animations.ts  index.ts  utils.ts
src/lib/api/: index.ts  kanban.ts  projects.ts
src/lib/query/: index.ts  mutations.ts  queries.ts  queryClient.ts
src/lib/schemas/: index.ts  kanban.ts
src/styles/: globals.css
src/types/: kanban.ts
